# Matrix

./: .env.example  .gitignore  LICENSE  README.md  analytics_main.py  main.py  pyproject.toml  stock_main.py  us_main.py
deploy/systemd/: matrix-analytics.service  matrix-analytics.timer  matrix-etf.service  matrix-etf.timer  matrix-stock.service  matrix-stock.timer  matrix-us.service  matrix-us.timer
docs/: analytics.md  architecture.md  data_source.md  etf_strategy.md  stock_strategy.md  strategies.md  us_strategy.md
matrix_etf/: __init__.py
matrix_etf/analytics/: __init__.py  benchmark.py  db.py  forward.py  integration.py  metrics.py  replay.py  report.py  scorecard.py  signals.py
matrix_etf/core/: __init__.py  config.py  logger.py  trading_calendar.py
matrix_etf/data/: __init__.py  engine.py  rate_limit.py  stock_engine.py  sync_runner.py  tickflow_client.py  us_stock_engine.py
matrix_etf/notify/: __init__.py  feishu.py
matrix_etf/strategy/: __init__.py  base.py  breakout_volume.py  hold_days.py  mean_reversion.py  mega7_rotation.py  names.py  rps_momentum.py  trend_ma.py
matrix_etf/strategy/etf/: __init__.py  etf_pool.py
scripts/: run_analytics.sh  run_matrix.sh  run_stock.sh  run_us.sh
tests/: __init__.py  test_analytics.py  test_config.py  test_data_engine.py  test_etf_pool.py  test_feishu.py  test_logger.py  test_main.py  test_rate_limit.py  test_stock_engine.py  test_stock_main.py  test_stock_strategy.py  test_strategy.py  test_strategy_names.py  test_sync_runner.py  test_trading_calendar.py  test_us_strategy.py
(+12 files in other folders)
