[project]
name = "matrix-etf"
version = "1.0.0"
description = "ETF recommendation system powered by the tickflow data source"
requires-python = ">=3.10"
dependencies = [
    "tickflow[all]>=0.1.24",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-mock>=3.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
